@@ -1,0 +1,2 @@
+11111 Bob                  A 00005.23 0034 S
+00000 END_OF_FILE          A 00000.00 0000 S
